恢复被删除的样式和文案

--- a/sxw_common_lib/src/main/res/values/strings.xml
+++ b/sxw_common_lib/src/main/res/values/strings.xml
@@ -41,4 +41,12 @@
 
     <string name="permission_grant_title">温馨提示</string>
     <string name="permission_grant_tip">应用中截屏、同屏等功能需要读取屏幕相关数据，请授予应用使用相关权限！</string>
+
+    <string name="get_info_failed">错误的请求地址</string>
+    <string name="json_format_error">数据格式错误！</string>
+    <string name="server_error">服务器异常，请重试！</string>
+    <string name="internal_server_error">内部服务器错误，请重试！</string>
+    <string name="login_time_out">登录过期，请重新登录！</string>
+    <string name="network_access_error">没有连接互联网，请连接网络后重试~</string>
+
 </resources>
