--- a/sxw_common_lib/src/main/res/values/strings.xml
+++ b/sxw_common_lib/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="login_time_out">登录过期，请重新登录！</string>
     <string name="network_access_error">没有连接互联网，请连接网络后重试~</string>
 
+    <string name="server_timeout">连接服务器超时，请重试！</string>
+    <string name="server_error_unknown">未知的服务器错误，请重试！</string>
 </resources>
